# botifactory-common

./: Cargo.toml
.github/workflows/: bloat.yml  general.yml
src/: botifactory_api.rs  channel.rs  error.rs  identifier.rs  lib.rs  project.rs  release.rs  usage_idea.rs  util.rs
